--- a/bento-grid/styles.css
+++ b/bento-grid/styles.css
@@ -292,6 +292,7 @@ body{
   .grid {
     grid-template-columns: repeat(3, 1fr); /* 2 columnas */
     grid-template-rows: repeat(6, 1fr);
+    width: 90%;
   }
 
   .item-7 {
@@ -483,6 +484,7 @@ body{
   .grid {
     grid-template-columns: repeat(2, 1fr); 
     grid-template-rows: repeat(8, 1fr);
+    width: 100%;
   }
 
   .item-7 {
