--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -897,15 +897,23 @@ flex-direction: column;
          padding-right: 20px;
          padding-left: 20px;
          border-radius: 10px;
+         position: absolute;
+         top: 10px;
+         right: 10px;
+    }
+
+    .top-bar{
+        position: relative;
     }
 
   .nav-links {
     display: none; 
     flex-direction: column;
     position: absolute;
-    top: 110px;
+    top: 50px;
     right: 10px;
     padding: 10px;
+    background-color: var(--background-blue);
   }
 
   .text-links:hover{
@@ -918,23 +926,28 @@ flex-direction: column;
 
    .top-grid{
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(1, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        row-gap: 10px;
     }
 
     .top-item2{
-        grid-row: 1 / 2;
-        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+        grid-column: 1 / 2;
     }
 
     .top-item1{
         grid-row: 1 / 2;
-        grid-column: 1 / 3;
+        grid-column: 1 / 2;
     }
 
     .top-item3{
-        grid-row: 1 / 2;
-        grid-column: 4 / 5;
+        grid-row: 3 / 4;
+        grid-column: 1 / 2;
+    }
+
+    .inicio{
+        height: 630px;
     }
 
 .about {
@@ -1031,5 +1044,9 @@ flex-direction: column;
   .btn-footer {
     position: static;
     margin: 15px auto 0;
+  }
+
+  .m-bottom-mobile{
+    margin-bottom: 20px;
   }
 }
