--- a/galeria-responsive/style.css
+++ b/galeria-responsive/style.css
@@ -48,6 +48,19 @@ img {
     object-fit: cover;
 }
 
+.item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: filter var(--trans), transform var(--trans);
+}
+
+.item img:hover {
+  filter: grayscale(100%);
+  transform: scale(var(--hover-scale));
+  cursor: pointer;
+}
+
 .item-2{
     grid-row: 1 / 2;
     grid-column: 2 / 3;
