--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -924,6 +924,10 @@ flex-direction: column;
     display: flex; 
   }
 
+  .nav-links li{
+    padding: 10px;
+  }
+
    .top-grid{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
